fix don't show horizontal scrollbar on mobile view

--- a/src/components/game/map/MapChoice.module.css
+++ b/src/components/game/map/MapChoice.module.css
@@ -3,6 +3,8 @@
 	top: 0;
 	left: 0;
 	opacity: 0;
+	margin: 0;
+	padding: 0;
 	width: 100%;
 	height: 100%;
 	z-index: -1;
